--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,54 @@
+* {
+  box-sizing: border-box;
+}
+:root {
+  font-size: 16px;
+}
+body {
+  width: 100%;
+  margin: 0px;
+}
+
+.popup-container {
+  padding-top: 10px;
+}
 button {
   height: 30px;
   width: 30px;
   outline: none;
+}
+
+.popup-header {
+  width: 300px;
+}
+.popup-header p {
+  font-size: 1.2rem;
+  text-align: center;
+  margin: 0px;
+  color: #d67f7f;
+  font-weight: bold;
+}
+
+.popup-body {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.popup-body-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.popup-body-list li p {
+  font-size: 1rem;
+}
+
+.popup-body-list li {
+  border-bottom: 1px solid #de7474;
+  padding-left: 10px;
+  cursor: pointer;
+}
+.popup-body-list li:last-child {
+  border-bottom: 0px;
 }
