--- a/pages/suspendedpage.css
+++ b/pages/suspendedpage.css
@@ -3,6 +3,10 @@
   font-family: cursive;
 }
 
+html {
+  font-size: 16px;
+}
+
 /* body {
   font-family: cursive;
 } */
@@ -12,7 +16,9 @@
 }
 
 .page-url {
-  font-size: 16px;
+  font-size: 1rem;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
 .suspended-html-container {
   display: flex;
@@ -41,4 +47,22 @@
 
 .page-url:hover {
   text-decoration: underline;
+}
+
+.giphy {
+  width: 250px;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #fff;
+    background-color: rgb(14, 20, 27);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    color: #000;
+    background-color: rgb(255, 255, 255);
+  }
 }
