--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  --main-text-color: #696666ee;
 }
 :root {
   font-size: 16px;
@@ -9,9 +10,6 @@ body {
   margin: 0px;
 }
 
-.popup-container {
-  padding-top: 10px;
-}
 button {
   height: 30px;
   width: 30px;
@@ -20,6 +18,13 @@ button {
 
 .popup-header {
   width: 300px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #d9d1d159;
+  box-shadow: 0 55px 110px -2rem hsla(0, 2%, 37%, 0.9);
+  border-bottom: 1px solid #e27272;
 }
 .popup-header p {
   font-size: 1.2rem;
@@ -30,7 +35,7 @@ button {
 }
 
 .popup-body {
-  padding-top: 15px;
+  /* padding-top: 15px; */
   padding-bottom: 15px;
 }
 
@@ -41,7 +46,8 @@ button {
 }
 
 .popup-body-list li p {
-  font-size: 1rem;
+  font-size: 0.8125rem;
+  color: var(--main-text-color);
 }
 .popup-body-list li p:hover {
   text-decoration: underline;
@@ -55,9 +61,40 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 40px;
 }
 .popup-body-list li:last-child {
   border-bottom: 0px;
+}
+
+.info-section {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15px;
+}
+
+.info-section .left-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-section .left-section span:nth-child(2) {
+  color: #d44848;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.info-section .right-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-section .right-section span:nth-child(2) {
+  color: #1aa71a;
+  font-weight: bold;
+  font-size: 16px;
 }
 /* 
 #mark-as-private {
