--- a/options.css
+++ b/options.css
@@ -4,8 +4,26 @@
     0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.4); */
   --main-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+
+  --main-text-color: #696666ee;
+  --golden-road: #daa520;
+  --light-coral: #f08080;
+  --salmon: #fa8072;
 }
 
+.page-heading {
+  font-size: 2rem;
+  color: var(--light-coral);
+  letter-spacing: 0.1rem;
+}
+
+a {
+  color: #eee;
+}
+
+a:hover {
+  color: var(--light-coral);
+}
 #private-tabs {
   box-shadow: var(--main-box-shadow);
   border-radius: 5px;
@@ -22,6 +40,7 @@ svg:root {
 .options-sub-container {
   width: 50%;
   max-width: 600px;
+  min-width: 90vh;
   /* min-height: 100vh; */
   margin: 0px auto;
 
@@ -32,8 +51,12 @@ svg:root {
 }
 
 .section-title {
-  font-size: 0.875rem;
+  font-size: 1.25rem;
   margin-bottom: 20px;
+}
+
+.table-body {
+  padding: 0;
 }
 
 .option-row {
@@ -45,7 +68,7 @@ svg:root {
   /* border-top: 1px solid rgb(255 255 255 / 44%); */
   font-size: 0.8125rem;
   display: grid;
-  grid-template-columns: 60% 20% 20%;
+  grid-template-columns: 60% 15% 15% 10%;
 }
 .option-header {
   display: flex;
@@ -64,6 +87,11 @@ svg:root {
 }
 .option-row {
   padding: 0px 25px;
+}
+
+.option-row span {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .options-list .option-row:last-child {
@@ -95,6 +123,28 @@ svg:root {
 .left {
   transform: rotate(0deg);
 }
+
+#search-url {
+  background: #212224;
+  border: 0px;
+  color: #fff;
+  margin-left: 10px;
+  height: 26px;
+  /* background: red; */
+  display: block;
+  border-radius: 5px;
+  padding-left: 10px;
+  width: 250px;
+  height: 30px;
+}
+
+.header span {
+  font-weight: bold;
+}
+.header span:first-child {
+  display: flex;
+  align-items: center;
+}
 @media (prefers-color-scheme: dark) {
   body {
     color: #fff;
@@ -113,5 +163,9 @@ svg:root {
 
   #private-tabs {
     background-color: #ffffff;
+  }
+  #search-url {
+    background: #fff;
+    color: #000;
   }
 }
