--- a/options.css
+++ b/options.css
@@ -74,7 +74,7 @@ svg:root {
   /* border-top: 1px solid rgb(255 255 255 / 44%); */
   font-size: 0.8125rem;
   display: grid;
-  grid-template-columns: 60% 15% 15% 10%;
+  grid-template-columns: 5% 40% 15% 15% 25%;
 }
 .option-header {
   display: flex;
@@ -144,8 +144,13 @@ svg:root {
   display: block;
   border-radius: 5px;
   padding-left: 10px;
-  width: 250px;
+
   height: 30px;
+}
+
+.search-url-header {
+  display: flex;
+  align-items: center;
 }
 
 .header span {
@@ -183,6 +188,13 @@ svg:root {
   width: 15px;
   cursor: pointer;
 }
+.cross-icon-svg-container {
+  font-size: 0.75rem;
+  cursor: pointer;
+}
+.cross-icon-svg-container:hover {
+  text-decoration: underline;
+}
 
 input#add-url-input {
   font-size: 1rem;
@@ -208,6 +220,14 @@ input#add-url-input {
 
 #add-new-btn:hover {
   transform: scale(1.02);
+}
+
+.favicon-url {
+  height: 20px;
+}
+
+.globe-icon {
+  fill: #eee;
 }
 @media (prefers-color-scheme: dark) {
   body {
@@ -244,5 +264,8 @@ input#add-url-input {
   input#add-url-input {
     background: #eee;
     color: #000;
+  }
+  .globe-icon {
+    fill: #000;
   }
 }
