--- a/options.css
+++ b/options.css
@@ -22,6 +22,10 @@
   font-weight: bold;
 }
 
+.page-heading img {
+  height: 20px;
+}
+
 a {
   color: #eee;
 }
@@ -66,49 +70,52 @@ svg:root {
 }
 
 .option-row {
-  height: 48px;
-  /* display: flex; */
-  align-items: center;
-  /* justify-content: space-between; */
-  border-bottom: 1px solid rgb(255 255 255 / 44%);
-  /* border-top: 1px solid rgb(255 255 255 / 44%); */
-  font-size: 0.8125rem;
   display: grid;
+  min-height: 48px;
+  align-items: center;
+  padding: 0px 25px;
   grid-template-columns: 5% 40% 15% 15% 25%;
+  border-bottom: 1px solid rgb(255 255 255 / 44%);
+  font-size: 0.8125rem;
 }
+
 .option-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   height: 48px;
-
-  /* border-bottom: 1px solid rgb(255 255 255 / 44%);
-  border-top: 1px solid rgb(255 255 255 / 44%); */
   font-size: 0.8125rem;
 }
 .option-header p {
   font-size: 1rem;
   font-weight: bold;
 }
-
 .options-list {
   padding: 0px;
 }
-.option-row {
-  padding: 0px 25px;
-}
-
 .option-row span {
   overflow: hidden;
   text-overflow: ellipsis;
+  padding: 10px 4px;
+}
+.option-row .header span {
+  padding: auto 4px;
+}
+.option-row span:first-child {
+  margin-right: 8px;
+}
+.option-row .center-column {
+  text-align: center;
+}
+.option-row .remove-button {
+  text-align: right;
 }
 
-.options-list .option-row:last-child {
-  border-bottom-width: 0px;
-}
 .options-list .option-row:first-child {
   border-top-width: 0px;
+}
+.options-list .option-row:last-child {
+  border-bottom-width: 0px;
 }
 
 .option-header {
@@ -140,11 +147,9 @@ svg:root {
   color: #fff;
   margin-left: 10px;
   height: 26px;
-  /* background: red; */
   display: block;
   border-radius: 5px;
   padding-left: 10px;
-
   height: 30px;
 }
 
@@ -188,11 +193,12 @@ svg:root {
   width: 15px;
   cursor: pointer;
 }
-.cross-icon-svg-container {
+
+.remove-button {
   font-size: 0.75rem;
   cursor: pointer;
 }
-.cross-icon-svg-container:hover {
+.remove-button:hover {
   text-decoration: underline;
 }
 
@@ -205,8 +211,6 @@ input#add-url-input {
   border-radius: 5px;
 }
 #add-new-btn {
-  /* background: #212224;
-  color: #fff; */
   border: none;
   box-shadow: var(--cta-box-shadow);
   font-weight: bold;
@@ -268,4 +272,22 @@ input#add-url-input {
   .globe-icon {
     fill: #000;
   }
+}
+
+.empty-container {
+  position: relative;
+  width: 755px;
+  height: 300px;
+  margin: 20px 10px;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='20' ry='20' stroke='%23333' stroke-width='4' stroke-dasharray='17%2c 8' stroke-dashoffset='8' stroke-linecap='round'/%3e%3c/svg%3e");
+  border-radius: 20px;
+}
+.empty-container p {
+  margin: 0;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
