--- a/options.css
+++ b/options.css
@@ -9,7 +9,7 @@
     0 30px 60px -30px rgba(0, 0, 0, 0.3),
     inset 0 -2px 6px 0 rgba(10, 37, 64, 0.35);
   --main-text-color: #696666ee;
-  --golden-road: #daa520;
+  --golden-road: #ff9a76;
   --light-coral: #f08080;
   --salmon: #fa8072;
   letter-spacing: 0.05rem;
