--- a/popup.css
+++ b/popup.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
   --main-text-color: #696666ee;
-  --golden-road: #daa520;
+  --golden-road: #ff9a76;
   --light-coral: #f08080;
   --salmon: #fa8072;
   letter-spacing: 0.1em;
